# phany

./: Cargo.toml  LICENSE.mit  README.md
.github/workflows/: rust.yml
src/: cli.rs  config.rs  main.rs  ui.rs
src/components/: image.rs  mod.rs  viewer.rs
src/db/: datastore.rs  mod.rs
src/iop/: image.rs  mod.rs
src/loader/: meta.rs  mod.rs
